--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@types/socket.io": "^3.0.1",
     "chart.js": "^4.4.6",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
