--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.49",
+    "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.4.15",
     "typescript": "~5.4.2",
     "typescript-eslint": "8.16.0"
