--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^17.3.0",
     "@types/socket.io": "^3.0.1",
     "chart.js": "^4.4.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
